networking.tf
resource "aws_vpc" "example_vpc" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "main_public" {
  vpc_id     = aws_vpc.example_vpc.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "Main"
  }
}

#WIP
resource "aws_route_table" "main_public_route_table" {
  vpc_id = aws_vpc.example_vpc.id

}
